@@ -1,6 +1,7 @@
 package org.hisp.dhis.rules.models;
 
 import com.google.auto.value.AutoValue;
+import org.hisp.dhis.rules.Option;
 import org.hisp.dhis.rules.RuleVariableValue;
 import org.hisp.dhis.rules.RuleVariableValueMapBuilder;
 
@@ -19,10 +20,10 @@ public abstract class RuleVariableAttribute
 {
 
     @Nonnull
-    public static RuleVariableAttribute create( @Nonnull String name,
-        @Nonnull String attribute, @Nonnull RuleValueType attributeType )
+    public static RuleVariableAttribute create(@Nonnull String name,
+                                               @Nonnull String attribute, @Nonnull RuleValueType attributeType, boolean useCodeForOptionSet, List<Option> options)
     {
-        return new AutoValue_RuleVariableAttribute( name, attribute, attributeType );
+        return new AutoValue_RuleVariableAttribute( name, useCodeForOptionSet, options, attribute, attributeType );
     }
 
     @Nonnull
@@ -47,8 +48,11 @@ public abstract class RuleVariableAttribute
         {
             RuleAttributeValue value = currentEnrollmentValues
                 .get( this.trackedEntityAttribute() );
-            variableValue = RuleVariableValue.create( value.value(), this.trackedEntityAttributeType(),
-                Arrays.asList( value.value() ), currentDate );
+
+            String optionValue = this.useCodeForOptionSet() ? value.value() : getOptionName( value.value() );
+
+            variableValue = RuleVariableValue.create( optionValue, this.trackedEntityAttributeType(),
+                    List.of(optionValue), currentDate );
         }
         else
         {
